# lulis-skill

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  cli.py  hermes_state.py  model_tools.py  pyproject.toml  run_agent.py
agent/: auxiliary_client.py
docs/: MULTI-AGENT-LITE-FIRST-CUT-CODE-REFACTOR-DRAFT.md  MULTI-AGENT-LITE-INTEGRATION-REFIT-PLAN.md  MULTI-AGENT-LITE-OUTER-ADAPTER-CONTRACT.md  MULTI-AGENT-LITE-STAGE-1-CLOSURE-SUMMARY.md  MULTI-MODEL-ADOPTION.md  NEXT-IMPLEMENTATION-CUTS.md  OPTIMIZATION-NOTES-2026-03-30.md  PLANNING-PROFILES.md  REPO-STRUCTURE.md  REVIEW-AND-EXPECTATIONS.md  SKILL-AUTHORING-RULES.md
environments/: agent_loop.py  tool_context.py
frameworks/multi-agent-lite/: AUDIT-FOLLOWUP-SUMMARY-2026-04-13.md  CLOSURE-SUMMARY-2026-04-13.md  README.md  STAGE-2-SUMMARY-2026-04-12.md  coding_executor.py  coding_executor_contract.py  coding_profile.py  main.py  outer_adapter.py  outer_framework.py  validate_coding_executor.py  validate_delivery.py  validate_handoff_and_result_packet.py  validate_orchestrator_trace.py  validate_outer_adapter.py  validate_outer_framework.py  writeback_stub.py
frameworks/responses-image-endpoint/: README.md  generate_image.py  probe_endpoint.py  responses_image_api.py
hermes_cli/: runtime_provider.py
skills/multi-agent-lite/: SKILL.md
skills/responses-image-endpoint/: SKILL.md
tests/: test_hermes_state.py  test_model_tools.py
tests/agent/: test_subagent_progress.py
tests/gateway/: test_api_server.py
tests/run_agent/: test_run_agent.py
tools/: code_execution_tool.py  delegate_tool.py
(+47 files in other folders)
