[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lulis-skill"
version = "0.1.0"
description = "A focused repository of reusable AgentSkills, optional skills, and small supporting frameworks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "guhuaizhou79" }]
license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q"
